--- a/app/globals.css
+++ b/app/globals.css
@@ -7,5 +7,7 @@ body {
 }
 
 .emoji {
-    font-family: 'Noto Color Emoji', sans-serif;
+    font-family: "Noto Color Emoji", sans-serif;
+    font-weight: 400;
+    font-style: normal;
   }
